--- a/index.html
+++ b/index.html
@@ -9,6 +9,45 @@
       <script src="js/scripts.js"></script>
     </head>
     <body>
+        <div class="jumbotron">
+      <h1 class="text-center"><a class= "nostyle">PING-PONG</a></h1>
+    </div>
+ <div class="row">
+     <div class="col-sm-4" id="about">
+
+<h1 class="text-center"><a class= "nostyle">PiNG PoNG</a></h1>
+<h5>Created by:</h5>
+            <p>Molly Curtin</p>
+            <h5>GitHub:</h5>
+            <a href="https://github.com/ephieprogrammer">EphieProgrammer</a></p>
+            <p><b>CSS</b>, please!</p>
+
+     </div>
+
+     <div class="col-sm-8" id="pong">
+         <h2><b>Let's Play!</b></h2>
+                     <BR>
+                     <h4>Thee Rules</h4>
+                     <BR>
+                     <p><b>PING-PONG will count up to your number from 1 with the following exceptions:</b></p>
+                     <ol>
+                       <li>Numbers divisible by 3 become "ping"</li>
+                       <li>Numbers divisible by 5 become "pong"</li>
+                       <li>Numbers divisible by 3 and 5 become "pingpong"</li>
+                     </ol>
+                     <BR><BR>
+                     <form class = "form-inline" id="formInput">
+                       <div class="form-group">
+                         <label for="Number Entry">Please enter a number here:</label><BR>
+                         <input type="number" class="form-control" id="numberEntry">
+                       </div>
+                       <button type="submit" class="btn btn-danger">Go!</button>
+                     </form>
+                     <ul class="output">
+                     </ul>
+     </div>
+ </div>
+
 
     </body>
 </html>
