did the js part and also created a readme

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                      <form class = "form-inline" id="formInput">
                        <div class="form-group">
                          <label for="Number Entry">Please enter a number here:</label><BR>
-                         <input type="number" class="form-control" id="numberEntry">
+                         <input type="number" class="form-control" id="numberInput">
                        </div>
                        <button type="submit" class="btn btn-danger">Go!</button>
                      </form>
