--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@
       <script src="js/scripts.js"></script>
     </head>
     <body>
-        <div class="jumbotron">
+        <div class="jumbotron" id="jumbo">
       <h1 class="text-center"><a class= "nostyle">PING-PONG</a></h1>
     </div>
  <div class="row">
      <div class="col-sm-4" id="about">
 
 <h1 class="text-center"><a class= "nostyle">PiNG PoNG</a></h1>
-<h5>Created by:</h5>
-            <p>Molly Curtin</p>
+<h3>Created by:</h3></h4>Ephie Programmer</h4>
             <h5>GitHub:</h5>
             <a href="https://github.com/ephieprogrammer">EphieProgrammer</a></p>
-            <p><b>CSS</b>, please!</p>
+
 
      </div>
 
