modified read me

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <body>
         <div class="jumbotron" id="jumbo">
       <h1 class="text-center"><a class= "nostyle">PING-PONG</a></h1>
+      <h3 class="text-center"><a class= "nostyle">created by EphieProgrammer</a></h3>
     </div>
  <div class="row">
      <div class="col-sm-4" id="about">
@@ -18,7 +19,7 @@
 <h1 class="text-center"><a class= "nostyle">PiNG PoNG</a></h1>
 <h3>Created by:</h3></h4>Ephie Programmer</h4>
             <h5>GitHub:</h5>
-            <a href="https://github.com/ephieprogrammer">EphieProgrammer</a></p>
+            <a href="https://github.com/EPHIEPROGRAMMER">EphieProgrammer</a></p>
 
 
      </div>
